do not needlessly run through Solid::Device::allDevices

Summary:
allDevice is bugging out and having duplicated entires
https://bugs.kde.org/show_bug.cgi?id=416495
this results in garbage in our tree view.
on top of that running through allDevices is entirely pointless
as we can directly construct a Device from the udi we got which
is not only faster, it also lets us bypass the aformentioned
bug since the udi is still unique it's only the objects that
get duped

BUG: 399746
FIXED-IN: 5.18.0

Test Plan: repated plug/unplug of usb drive doesn't cause bogus device entries

Reviewers: apol, ngraham

Reviewed By: apol, ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26788